# dotfiles

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  devshells.nix  flake.nix  nohup.out
ags/: genTypes.fish  options.ts
ags/greeter/: auth.ts  session.ts
ags/widget/bar/: screencorner.scss
ags/widget/notifications/: NotificationPopups.ts
home-manager/: ags.nix  alacritty.nix  anyrun.nix  blackbox.nix  browser.nix  dconf.nix  direnv.nix  foot.nix  git.nix  hyprland.nix  hyprpanel.nix  neofetch.nix  nvim.nix  packages.nix  sh.nix  starship.nix  theme.nix  walker.nix  waybar.nix  wezterm.nix  yazi.nix  zellij.nix
home-manager/.helix/: recent-files.txt
home-manager/hyprland/: default.nix  hypreco.nix
home-manager/nixvim/: default.nix
home-manager/scripts/: batt.nix  gamemode.nix
home-manager/shell/: default.nix  direnv.nix  git.nix  gruber-darker.theme  helix.nix  nvim.nix  yazi.nix
home-manager/shell/starship/: default.nix  starship.toml
home-manager/shell/zellij/: config.kdl  default.kdl  default.nix
home-manager/wezterm/: charmful.lua  gnome.lua  keys.lua  wezterm.lua
nixos/: audio.nix  gnome.nix  home.nix  hyprland.nix  laptop.nix  locale.nix  nixos.nix  services.nix
nvim/lua/config/: keymaps.lua  lazy.lua
nvim/lua/plugins/: comment.lua  toggleterm.lua
prayers/: default.nix
prayers/src/: config.rs  helpers.rs  lib.rs  requests.rs  timings.rs
prayers2/: Cargo.toml  flake.nix
prayers2/src/: lib.rs  main.rs
themes/: mine.json
user-shell/: flake.nix  package.json
waybar/: config.json  config.jsonc  style.css
(+4 files in other folders)
