[package]
name = "prayers2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
chrono-tz = "0.8.6"
dir = "0.1.2"
dirs = "5.0.1"
http = "1.0.0"
notify-rust = "4.10.0"
reqwest = { version = "0.11.24", features = ["json", "wasm-streams"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simd-json = "0.13.8"
tokio = { version = "1.36.0", features = ["full"] }


[profile.release]
opt-level = 3                 # Optimize for size
lto = "fat"                   # Use Thin LTO for link-time optimization
codegen-units = 1             # Use a single codegen unit for better optimization
debug = false                 # Disable debug information
panic = "abort"               # Abort on panic for better performance
overflow-checks = false       # Disable overflow checks for better performance

[build]
rustflags = ["-Z", "threads=8"]
